set(LLVM_LINK_COMPONENTS
  Support
)

add_llvm_tool(circt-opt
  circt-opt.cpp
)
llvm_update_compile_flags(circt-opt)
target_link_libraries(circt-opt
  PRIVATE
  CIRCTAffineToLoopSchedule
  CIRCTAnalysisTestPasses
  CIRCTArc
  CIRCTArcToLLVM
  CIRCTArcTransforms
  CIRCTCalyx
  CIRCTCalyxToHW
  CIRCTCalyxToFSM
  CIRCTCalyxTransforms
  CIRCTComb
  CIRCTCombTransforms
  CIRCTConvertToArcs
  CIRCTDC
  CIRCTDCToHW
  CIRCTDCTransforms
  CIRCTESI
  CIRCTExportChiselInterface
  CIRCTExportVerilog
  CIRCTFIRRTL
  CIRCTFIRRTLToHW
  CIRCTFIRRTLTransforms
  CIRCTFSM
  CIRCTFSMTransforms
  CIRCTFSMToSV
  CIRCTHandshake
  CIRCTHandshakeToDC
  CIRCTHandshakeToHW
  CIRCTHandshakeTransforms
  CIRCTLLHD
  CIRCTLLHDToLLVM
  CIRCTHWToLLVM
  CIRCTCombToArith
  CIRCTCombToLLVM
  CIRCTLLHDTransforms
  CIRCTMoore
  CIRCTMooreToCore
  CIRCTMSFT
  CIRCTMSFTTransforms
  CIRCTHW
  CIRCTHWArith
  CIRCTHWArithToHW
  CIRCTIbis
  CIRCTIbisTransforms
  CIRCTInteropDialect
  CIRCTHWToLLHD
  CIRCTHWToSystemC
  CIRCTHWToSV
  CIRCTHWTransforms
  CIRCTLoopSchedule
  CIRCTLoopScheduleToCalyx
  CIRCTLTL
  CIRCTSCFToCalyx
  CIRCTScheduling
  CIRCTSeq
  CIRCTSeqTransforms
  CIRCTSSP
  CIRCTSSPTransforms
  CIRCTStandardToHandshake
  CIRCTOM
  CIRCTOMTransforms
  CIRCTPipelineOps
  CIRCTPipelineToHW
  CIRCTPipelineTransforms
  CIRCTSV
  CIRCTSVTransforms
  CIRCTHWArith
  CIRCTSystemC
  CIRCTSystemCTransforms
  CIRCTTransforms
  CIRCTVerif
  CIRCTVerifToSV

  MLIRIR
  MLIRLLVMDialect
  MLIRMemRefDialect
  MLIROptLib
  MLIRParser
  MLIRFuncDialect
  MLIRSupport
  MLIRTransforms
  MLIRSCFDialect
  MLIREmitCDialect
  MLIRFuncInlinerExtension
)
